new blog: passing-events-elegantly-in-React

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description:           >
 
 # A shorter description for the sidebar.
 tagline:               >
-  About front-end develop, and back-end develp, as well as functional programming.
+  About front-end develop, and back-end develop, as well as functional programming.
 
 # A list of keywords for your blog.
 keywords:              [front-end-develop,functional-programming]
