--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,15 @@
 lang:                  en
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 林集团的博客
+title:                 polymona的博客
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  林集团的博客
+  polymona的博客
 
 # A shorter description for the sidebar.
 tagline:               >
-  林集团系统化的个人知识梳理
+  polymona系统化的个人知识梳理
 
 # A list of keywords for your blog.
 keywords:              [front-end-develop,functional-programming]
@@ -38,7 +38,7 @@ logo:                  /assets/imgs/logo.jpeg
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                林集团
+  name:                polymona
   email:               jituanlin@gmail.com
   # Used by `jekyll-seo-tag`:
   # twitter:             <username>
